laborations/lab4/testsuite/good/008.hs
main = print ((\ a -> 210) 211) ;
