laborations/lab4/testsuite/bad/007.hs
a b = c;
d c = a c;
main = print (d 111);
